--- a/src/_includes/base.njk
+++ b/src/_includes/base.njk
@@ -4,7 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/style.css">
-    <title>{{ title }}</title>
+    <title>{{ title }} | Elder Gehrig Davis</title>
+
+    <meta name="description" content="{{ description }}">
+    <meta name="keywords" content="Gehrig Davis, Facebook, Videos, LDS Missionary">
+    <meta property="og:title" content="{{ title }} - Elder Gehrig Davis">
+    <meta property="og:description" content="{{ description }}">
+    {# <meta property="og:image" content="https://example.com/image.jpg"> #}
+    <meta property="og:url" content="https://gehrigdavis.com/{{ permalink }}">
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:title" content="{{ title }}">
+    <meta property="twitter:description" content="{{ description }}">
+    {# <meta property="twitter:image" content="https://example.com/image.jpg"> #}
+
     <link href="https://cdnjs.cloudflare.com/ajax/libs/flowbite/1.8.1/flowbite.min.css" rel="stylesheet"/>
   </head>
   <body class="bg-white dark:bg-gray-900">
